networkpolicy/networkpolicy__basic_kafka_setup__prometheus__exception__app__egress__ports__9153__nr25__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--exception--app--egress--ports--9153--nr25
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: kube-system
    ports:
    - protocol: TCP
      port: 9153
